feat: Convert deserialize user responses to concrete types
